...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                tools:text="X" />

            <com.devexperto.testingexpert.ui.board.CellView
                android:id="@+id/btn_0_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                tools:text="X" />

            <com.devexperto.testingexpert.ui.board.CellView
                android:id="@+id/btn_0_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                tools:text="X" />
        </LinearLayout>
...
